--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "demoswc",
   "private": true,
+  "homepage": "http://artemis.github.io/lallave-form",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.2.1",
+    "gh-pages": "^4.0.0",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^8.7.3",
